Practica04/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}'

   2  lista_definiciones : lista_definiciones definicion_variable
   3                     | lista_definiciones definicion_funcion
   4                     |

   5  lista_definicion_variables : lista_definicion_variables definicion_variable
   6                             |

   7  definicion_variable : VAR variable ';'

   8  variable : variable_simple
   9           | variable_struct

  10  variable_simple : identificadores tipo_variable

  11  variable_struct : IDENT STRUCT '{' registros_struct '}'

  12  registros_struct : registros_struct variable_simple ';'
  13                   |

  14  tipo_variable : tipo
  15                | tipo_vector

  16  tipo : INT
  17       | FLOAT32
  18       | CHAR

  19  tipo_vector : '[' CTE_ENTERA ']' tipo_variable

  20  identificadores : IDENT
  21                  | identificadores ',' IDENT

  22  definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'

  23  tipo_retorno : tipo
  24               |

  25  lista_parametros_opt : lista_parametros
  26                       |

  27  lista_parametros : lista_parametros ',' parametro
  28                   | parametro

  29  parametro : IDENT tipo

  30  lista_sentencias : lista_sentencias sentencia
  31                   |

  32  sentencia : expresion '=' expresion ';'
  33            | IF expresion '{' lista_sentencias '}'
  34            | IF expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'
  35            | WHILE expresion '{' lista_sentencias '}'
  36            | IDENT '(' lista_expresiones_opt ')' ';'
  37            | WRITE '(' lista_expresiones ')' ';'
  38            | READ '(' lista_expresiones ')' ';'
  39            | RETURN expresion ';'

  40  cast : tipo '(' expresion ')'

  41  lista_expresiones_opt : lista_expresiones
  42                        |

  43  lista_expresiones : lista_expresiones ',' expresion
  44                    | expresion

  45  expresion : expresion '+' expresion
  46            | expresion '*' expresion
  47            | expresion '/' expresion
  48            | IDENT '(' lista_expresiones_opt ')'
  49            | expresion '%' expresion
  50            | expresion '-' expresion
  51            | cast
  52            | '-' expresion
  53            | '(' expresion ')'
  54            | expresion '[' expresion ']'
  55            | expresion AND expresion
  56            | expresion OR expresion
  57            | expresion IGUAL_IGUAL expresion
  58            | expresion MAYOR_IGUAL expresion
  59            | expresion MENOR_IGUAL expresion
  60            | expresion DISTINTO expresion
  61            | expresion '>' expresion
  62            | expresion '<' expresion
  63            | '!' expresion
  64            | expresion '.' expresion
  65            | CTE_ENTERA
  66            | CTE_REAL
  67            | CTE_CARACTER
  68            | IDENT

state 0
	$accept : . programa $end  (0)
	lista_definiciones : .  (4)

	.  reduce 4

	programa  goto 1
	lista_definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : lista_definiciones . FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}'  (1)
	lista_definiciones : lista_definiciones . definicion_variable  (2)
	lista_definiciones : lista_definiciones . definicion_funcion  (3)

	VAR  shift 3
	FUNC  shift 4
	.  error

	definicion_variable  goto 5
	definicion_funcion  goto 6


state 3
	definicion_variable : VAR . variable ';'  (7)

	IDENT  shift 7
	.  error

	variable  goto 8
	variable_simple  goto 9
	variable_struct  goto 10
	identificadores  goto 11


state 4
	programa : lista_definiciones FUNC . MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}'  (1)
	definicion_funcion : FUNC . IDENT '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (22)

	MAIN  shift 12
	IDENT  shift 13
	.  error


state 5
	lista_definiciones : lista_definiciones definicion_variable .  (2)

	.  reduce 2


state 6
	lista_definiciones : lista_definiciones definicion_funcion .  (3)

	.  reduce 3


state 7
	variable_struct : IDENT . STRUCT '{' registros_struct '}'  (11)
	identificadores : IDENT .  (20)

	STRUCT  shift 14
	INT  reduce 20
	FLOAT32  reduce 20
	CHAR  reduce 20
	'['  reduce 20
	','  reduce 20


state 8
	definicion_variable : VAR variable . ';'  (7)

	';'  shift 15
	.  error


state 9
	variable : variable_simple .  (8)

	.  reduce 8


state 10
	variable : variable_struct .  (9)

	.  reduce 9


state 11
	variable_simple : identificadores . tipo_variable  (10)
	identificadores : identificadores . ',' IDENT  (21)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	'['  shift 19
	','  shift 20
	.  error

	tipo_variable  goto 21
	tipo  goto 22
	tipo_vector  goto 23


state 12
	programa : lista_definiciones FUNC MAIN . '(' ')' '{' lista_definicion_variables lista_sentencias '}'  (1)

	'('  shift 24
	.  error


state 13
	definicion_funcion : FUNC IDENT . '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (22)

	'('  shift 25
	.  error


state 14
	variable_struct : IDENT STRUCT . '{' registros_struct '}'  (11)

	'{'  shift 26
	.  error


state 15
	definicion_variable : VAR variable ';' .  (7)

	.  reduce 7


state 16
	tipo : INT .  (16)

	.  reduce 16


state 17
	tipo : FLOAT32 .  (17)

	.  reduce 17


state 18
	tipo : CHAR .  (18)

	.  reduce 18


state 19
	tipo_vector : '[' . CTE_ENTERA ']' tipo_variable  (19)

	CTE_ENTERA  shift 27
	.  error


state 20
	identificadores : identificadores ',' . IDENT  (21)

	IDENT  shift 28
	.  error


state 21
	variable_simple : identificadores tipo_variable .  (10)

	.  reduce 10


state 22
	tipo_variable : tipo .  (14)

	.  reduce 14


state 23
	tipo_variable : tipo_vector .  (15)

	.  reduce 15


state 24
	programa : lista_definiciones FUNC MAIN '(' . ')' '{' lista_definicion_variables lista_sentencias '}'  (1)

	')'  shift 29
	.  error


state 25
	definicion_funcion : FUNC IDENT '(' . lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (22)
	lista_parametros_opt : .  (26)

	IDENT  shift 30
	')'  reduce 26

	lista_parametros_opt  goto 31
	lista_parametros  goto 32
	parametro  goto 33


state 26
	variable_struct : IDENT STRUCT '{' . registros_struct '}'  (11)
	registros_struct : .  (13)

	.  reduce 13

	registros_struct  goto 34


state 27
	tipo_vector : '[' CTE_ENTERA . ']' tipo_variable  (19)

	']'  shift 35
	.  error


state 28
	identificadores : identificadores ',' IDENT .  (21)

	.  reduce 21


state 29
	programa : lista_definiciones FUNC MAIN '(' ')' . '{' lista_definicion_variables lista_sentencias '}'  (1)

	'{'  shift 36
	.  error


state 30
	parametro : IDENT . tipo  (29)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	.  error

	tipo  goto 37


state 31
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt . ')' tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (22)

	')'  shift 38
	.  error


state 32
	lista_parametros_opt : lista_parametros .  (25)
	lista_parametros : lista_parametros . ',' parametro  (27)

	','  shift 39
	')'  reduce 25


state 33
	lista_parametros : parametro .  (28)

	.  reduce 28


state 34
	variable_struct : IDENT STRUCT '{' registros_struct . '}'  (11)
	registros_struct : registros_struct . variable_simple ';'  (12)

	IDENT  shift 40
	'}'  shift 41
	.  error

	variable_simple  goto 42
	identificadores  goto 11


state 35
	tipo_vector : '[' CTE_ENTERA ']' . tipo_variable  (19)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	'['  shift 19
	.  error

	tipo_variable  goto 43
	tipo  goto 22
	tipo_vector  goto 23


state 36
	programa : lista_definiciones FUNC MAIN '(' ')' '{' . lista_definicion_variables lista_sentencias '}'  (1)
	lista_definicion_variables : .  (6)

	.  reduce 6

	lista_definicion_variables  goto 44


state 37
	parametro : IDENT tipo .  (29)

	.  reduce 29


state 38
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' . tipo_retorno '{' lista_definicion_variables lista_sentencias '}'  (22)
	tipo_retorno : .  (24)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	'{'  reduce 24

	tipo  goto 45
	tipo_retorno  goto 46


state 39
	lista_parametros : lista_parametros ',' . parametro  (27)

	IDENT  shift 30
	.  error

	parametro  goto 47


state 40
	identificadores : IDENT .  (20)

	.  reduce 20


state 41
	variable_struct : IDENT STRUCT '{' registros_struct '}' .  (11)

	.  reduce 11


state 42
	registros_struct : registros_struct variable_simple . ';'  (12)

	';'  shift 48
	.  error


state 43
	tipo_vector : '[' CTE_ENTERA ']' tipo_variable .  (19)

	.  reduce 19


state 44
	programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_definicion_variables . lista_sentencias '}'  (1)
	lista_definicion_variables : lista_definicion_variables . definicion_variable  (5)
	lista_sentencias : .  (31)

	VAR  shift 3
	READ  reduce 31
	WRITE  reduce 31
	WHILE  reduce 31
	IF  reduce 31
	INT  reduce 31
	FLOAT32  reduce 31
	CHAR  reduce 31
	RETURN  reduce 31
	IDENT  reduce 31
	CTE_ENTERA  reduce 31
	CTE_REAL  reduce 31
	CTE_CARACTER  reduce 31
	'-'  reduce 31
	'!'  reduce 31
	'('  reduce 31
	'}'  reduce 31

	lista_sentencias  goto 49
	definicion_variable  goto 50


state 45
	tipo_retorno : tipo .  (23)

	.  reduce 23


state 46
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' tipo_retorno . '{' lista_definicion_variables lista_sentencias '}'  (22)

	'{'  shift 51
	.  error


state 47
	lista_parametros : lista_parametros ',' parametro .  (27)

	.  reduce 27


state 48
	registros_struct : registros_struct variable_simple ';' .  (12)

	.  reduce 12


state 49
	programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias . '}'  (1)
	lista_sentencias : lista_sentencias . sentencia  (30)

	READ  shift 52
	WRITE  shift 53
	WHILE  shift 54
	IF  shift 55
	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	RETURN  shift 56
	IDENT  shift 57
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'}'  shift 64
	.  error

	tipo  goto 65
	sentencia  goto 66
	expresion  goto 67
	cast  goto 68


state 50
	lista_definicion_variables : lista_definicion_variables definicion_variable .  (5)

	.  reduce 5


state 51
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' tipo_retorno '{' . lista_definicion_variables lista_sentencias '}'  (22)
	lista_definicion_variables : .  (6)

	.  reduce 6

	lista_definicion_variables  goto 69


state 52
	sentencia : READ . '(' lista_expresiones ')' ';'  (38)

	'('  shift 70
	.  error


state 53
	sentencia : WRITE . '(' lista_expresiones ')' ';'  (37)

	'('  shift 71
	.  error


state 54
	sentencia : WHILE . expresion '{' lista_sentencias '}'  (35)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 73
	cast  goto 68


state 55
	sentencia : IF . expresion '{' lista_sentencias '}'  (33)
	sentencia : IF . expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (34)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 74
	cast  goto 68


state 56
	sentencia : RETURN . expresion ';'  (39)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 75
	cast  goto 68


state 57
	sentencia : IDENT . '(' lista_expresiones_opt ')' ';'  (36)
	expresion : IDENT . '(' lista_expresiones_opt ')'  (48)
	expresion : IDENT .  (68)

	'('  shift 76
	IGUAL_IGUAL  reduce 68
	MAYOR_IGUAL  reduce 68
	MENOR_IGUAL  reduce 68
	DISTINTO  reduce 68
	'='  reduce 68
	AND  reduce 68
	OR  reduce 68
	'>'  reduce 68
	'<'  reduce 68
	'+'  reduce 68
	'-'  reduce 68
	'*'  reduce 68
	'/'  reduce 68
	'%'  reduce 68
	'['  reduce 68
	'.'  reduce 68


state 58
	expresion : CTE_ENTERA .  (65)

	.  reduce 65


state 59
	expresion : CTE_REAL .  (66)

	.  reduce 66


state 60
	expresion : CTE_CARACTER .  (67)

	.  reduce 67


state 61
	expresion : '-' . expresion  (52)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 77
	cast  goto 68


state 62
	expresion : '!' . expresion  (63)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 78
	cast  goto 68


state 63
	expresion : '(' . expresion ')'  (53)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 79
	cast  goto 68


state 64
	programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_definicion_variables lista_sentencias '}' .  (1)

	.  reduce 1


state 65
	cast : tipo . '(' expresion ')'  (40)

	'('  shift 80
	.  error


state 66
	lista_sentencias : lista_sentencias sentencia .  (30)

	.  reduce 30


state 67
	sentencia : expresion . '=' expresion ';'  (32)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '*' expresion  (46)
	expresion : expresion . '/' expresion  (47)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '-' expresion  (50)
	expresion : expresion . '[' expresion ']'  (54)
	expresion : expresion . AND expresion  (55)
	expresion : expresion . OR expresion  (56)
	expresion : expresion . IGUAL_IGUAL expresion  (57)
	expresion : expresion . MAYOR_IGUAL expresion  (58)
	expresion : expresion . MENOR_IGUAL expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . '.' expresion  (64)

	IGUAL_IGUAL  shift 81
	MAYOR_IGUAL  shift 82
	MENOR_IGUAL  shift 83
	DISTINTO  shift 84
	'='  shift 85
	AND  shift 86
	OR  shift 87
	'>'  shift 88
	'<'  shift 89
	'+'  shift 90
	'-'  shift 91
	'*'  shift 92
	'/'  shift 93
	'%'  shift 94
	'['  shift 95
	'.'  shift 96
	.  error


state 68
	expresion : cast .  (51)

	.  reduce 51


state 69
	lista_definicion_variables : lista_definicion_variables . definicion_variable  (5)
	definicion_funcion : FUNC IDENT '(' lista_parametros_opt ')' tipo_retorno '{' lista_definicion_variables . lista_sentencias '}'  (22)
	lista_sentencias : .  (31)

	VAR  shift 3
	READ  reduce 31
	WRITE  reduce 31
	WHILE  reduce 31
	IF  reduce 31
	INT  reduce 31
	FLOAT32  reduce 31
	CHAR  reduce 31
	RETURN  reduce 31
	IDENT  reduce 31
	CTE_ENTERA  reduce 31
	CTE_REAL  reduce 31
	CTE_CARACTER  reduce 31
	'-'  reduce 31
	'!'  reduce 31
	'('  reduce 31
	'}'  reduce 31

	lista_sentencias  goto 97
	definicion_variable  goto 50


state 70
	sentencia : READ '(' . lista_expresiones ')' ';'  (38)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 98
	lista_expresiones  goto 99
	cast  goto 68


state 71
	sentencia : WRITE '(' . lista_expresiones ')' ';'  (37)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 98
	lista_expresiones  goto 100
	cast  goto 68


state 72
	expresion : IDENT . '(' lista_expresiones_opt ')'  (48)
	expresion : IDENT .  (68)

	'('  shift 101
	IGUAL_IGUAL  reduce 68
	MAYOR_IGUAL  reduce 68
	MENOR_IGUAL  reduce 68
	DISTINTO  reduce 68
	'='  reduce 68
	AND  reduce 68
	OR  reduce 68
	'>'  reduce 68
	'<'  reduce 68
	'+'  reduce 68
	'-'  reduce 68
	'*'  reduce 68
	'/'  reduce 68
	'%'  reduce 68
	'['  reduce 68
	']'  reduce 68
	'.'  reduce 68
	')'  reduce 68
	'{'  reduce 68
	';'  reduce 68
	','  reduce 68


state 73
	sentencia : WHILE expresion . '{' lista_sentencias '}'  (35)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '*' expresion  (46)
	expresion : expresion . '/' expresion  (47)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '-' expresion  (50)
	expresion : expresion . '[' expresion ']'  (54)
	expresion : expresion . AND expresion  (55)
	expresion : expresion . OR expresion  (56)
	expresion : expresion . IGUAL_IGUAL expresion  (57)
	expresion : expresion . MAYOR_IGUAL expresion  (58)
	expresion : expresion . MENOR_IGUAL expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . '.' expresion  (64)

	IGUAL_IGUAL  shift 81
	MAYOR_IGUAL  shift 82
	MENOR_IGUAL  shift 83
	DISTINTO  shift 84
	AND  shift 86
	OR  shift 87
	'>'  shift 88
	'<'  shift 89
	'+'  shift 90
	'-'  shift 91
	'*'  shift 92
	'/'  shift 93
	'%'  shift 94
	'['  shift 95
	'.'  shift 96
	'{'  shift 102
	.  error


state 74
	sentencia : IF expresion . '{' lista_sentencias '}'  (33)
	sentencia : IF expresion . '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (34)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '*' expresion  (46)
	expresion : expresion . '/' expresion  (47)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '-' expresion  (50)
	expresion : expresion . '[' expresion ']'  (54)
	expresion : expresion . AND expresion  (55)
	expresion : expresion . OR expresion  (56)
	expresion : expresion . IGUAL_IGUAL expresion  (57)
	expresion : expresion . MAYOR_IGUAL expresion  (58)
	expresion : expresion . MENOR_IGUAL expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . '.' expresion  (64)

	IGUAL_IGUAL  shift 81
	MAYOR_IGUAL  shift 82
	MENOR_IGUAL  shift 83
	DISTINTO  shift 84
	AND  shift 86
	OR  shift 87
	'>'  shift 88
	'<'  shift 89
	'+'  shift 90
	'-'  shift 91
	'*'  shift 92
	'/'  shift 93
	'%'  shift 94
	'['  shift 95
	'.'  shift 96
	'{'  shift 103
	.  error


state 75
	sentencia : RETURN expresion . ';'  (39)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '*' expresion  (46)
	expresion : expresion . '/' expresion  (47)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '-' expresion  (50)
	expresion : expresion . '[' expresion ']'  (54)
	expresion : expresion . AND expresion  (55)
	expresion : expresion . OR expresion  (56)
	expresion : expresion . IGUAL_IGUAL expresion  (57)
	expresion : expresion . MAYOR_IGUAL expresion  (58)
	expresion : expresion . MENOR_IGUAL expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . '.' expresion  (64)

	IGUAL_IGUAL  shift 81
	MAYOR_IGUAL  shift 82
	MENOR_IGUAL  shift 83
	DISTINTO  shift 84
	AND  shift 86
	OR  shift 87
	'>'  shift 88
	'<'  shift 89
	'+'  shift 90
	'-'  shift 91
	'*'  shift 92
	'/'  shift 93
	'%'  shift 94
	'['  shift 95
	'.'  shift 96
	';'  shift 104
	.  error


state 76
	sentencia : IDENT '(' . lista_expresiones_opt ')' ';'  (36)
	expresion : IDENT '(' . lista_expresiones_opt ')'  (48)
	lista_expresiones_opt : .  (42)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	')'  reduce 42

	tipo  goto 65
	expresion  goto 98
	lista_expresiones_opt  goto 105
	lista_expresiones  goto 106
	cast  goto 68


state 77
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '*' expresion  (46)
	expresion : expresion . '/' expresion  (47)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '-' expresion  (50)
	expresion : '-' expresion .  (52)
	expresion : expresion . '[' expresion ']'  (54)
	expresion : expresion . AND expresion  (55)
	expresion : expresion . OR expresion  (56)
	expresion : expresion . IGUAL_IGUAL expresion  (57)
	expresion : expresion . MAYOR_IGUAL expresion  (58)
	expresion : expresion . MENOR_IGUAL expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . '.' expresion  (64)

	'['  shift 95
	'.'  shift 96
	IGUAL_IGUAL  reduce 52
	MAYOR_IGUAL  reduce 52
	MENOR_IGUAL  reduce 52
	DISTINTO  reduce 52
	'='  reduce 52
	AND  reduce 52
	OR  reduce 52
	'>'  reduce 52
	'<'  reduce 52
	'+'  reduce 52
	'-'  reduce 52
	'*'  reduce 52
	'/'  reduce 52
	'%'  reduce 52
	']'  reduce 52
	')'  reduce 52
	'{'  reduce 52
	';'  reduce 52
	','  reduce 52


state 78
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '*' expresion  (46)
	expresion : expresion . '/' expresion  (47)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '-' expresion  (50)
	expresion : expresion . '[' expresion ']'  (54)
	expresion : expresion . AND expresion  (55)
	expresion : expresion . OR expresion  (56)
	expresion : expresion . IGUAL_IGUAL expresion  (57)
	expresion : expresion . MAYOR_IGUAL expresion  (58)
	expresion : expresion . MENOR_IGUAL expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : '!' expresion .  (63)
	expresion : expresion . '.' expresion  (64)

	'['  shift 95
	'.'  shift 96
	IGUAL_IGUAL  reduce 63
	MAYOR_IGUAL  reduce 63
	MENOR_IGUAL  reduce 63
	DISTINTO  reduce 63
	'='  reduce 63
	AND  reduce 63
	OR  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'*'  reduce 63
	'/'  reduce 63
	'%'  reduce 63
	']'  reduce 63
	')'  reduce 63
	'{'  reduce 63
	';'  reduce 63
	','  reduce 63


state 79
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '*' expresion  (46)
	expresion : expresion . '/' expresion  (47)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '-' expresion  (50)
	expresion : '(' expresion . ')'  (53)
	expresion : expresion . '[' expresion ']'  (54)
	expresion : expresion . AND expresion  (55)
	expresion : expresion . OR expresion  (56)
	expresion : expresion . IGUAL_IGUAL expresion  (57)
	expresion : expresion . MAYOR_IGUAL expresion  (58)
	expresion : expresion . MENOR_IGUAL expresion  (59)
	expresion : expresion . DISTINTO expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . '.' expresion  (64)

	IGUAL_IGUAL  shift 81
	MAYOR_IGUAL  shift 82
	MENOR_IGUAL  shift 83
	DISTINTO  shift 84
	AND  shift 86
	OR  shift 87
	'>'  shift 88
	'<'  shift 89
	'+'  shift 90
	'-'  shift 91
	'*'  shift 92
	'/'  shift 93
	'%'  shift 94
	'['  shift 95
	'.'  shift 96
	')'  shift 107
	.  error


state 80
	cast : tipo '(' . expresion ')'  (40)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 108
	cast  goto 68


state 81
	expresion : expresion IGUAL_IGUAL . expresion  (57)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 109
	cast  goto 68


state 82
	expresion : expresion MAYOR_IGUAL . expresion  (58)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 110
	cast  goto 68


state 83
	expresion : expresion MENOR_IGUAL . expresion  (59)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 111
	cast  goto 68


state 84
	expresion : expresion DISTINTO . expresion  (60)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 112
	cast  goto 68


state 85
	sentencia : expresion '=' . expresion ';'  (32)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 113
	cast  goto 68


state 86
	expresion : expresion AND . expresion  (55)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 114
	cast  goto 68


state 87
	expresion : expresion OR . expresion  (56)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 115
	cast  goto 68


state 88
	expresion : expresion '>' . expresion  (61)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 116
	cast  goto 68


state 89
	expresion : expresion '<' . expresion  (62)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 117
	cast  goto 68


state 90
	expresion : expresion '+' . expresion  (45)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 118
	cast  goto 68


state 91
	expresion : expresion '-' . expresion  (50)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 119
	cast  goto 68


state 92
	expresion : expresion '*' . expresion  (46)

	INT  shift 16
	FLOAT32  shift 17
	CHAR  shift 18
	IDENT  shift 72
	CTE_ENTERA  shift 58
	CTE_REAL  shift 59
	CTE_CARACTER  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	.  error

	tipo  goto 65
	expresion  goto 120
	cast  goto 68


state 93
	expresion : expresion '/' . expresion  (47)
